package ejercicios_integradores.agencia_turismo.domain.reserva;

public interface Reservable {
    String getTipo();
    Double calcularPrecio();
}
